# test-deploy-koyeb

./: Makefile  Procfile  pyproject.toml  requirements.txt
fast-api/: pyproject.toml  requirements.txt
src/test_deploy_koyeb/adapters/: settings.py
src/test_deploy_koyeb/adapters/inbound/rest/: main.py
src/test_deploy_koyeb/adapters/inbound/rest/v1/controllers/: ping.py
