[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["alexa2me <senhorita.alexandra@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
